terraform/vpc/vpc.tf
// Create VPC
resource "aws_vpc" "first-vpc" {
  cidr_block = var.vpc-cidr
}

// create a security group 
resource "aws_security_group" "first-vpc-sg" {

  name        = "first-vpc-sg"

  vpc_id      = aws_vpc.first-vpc.id

  ingress {

    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_tls"
  }
}
